# djinni-nlp-jobs

./: .gitignore  README.md  app.py  pyproject.toml
models/: label_encoder.pkl  tfidf_vectorizer.pkl
notebooks/: 01_eda.ipynb  02_modeling.ipynb
